# rdieharder

./: .Rbuildignore  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.in  configure.win
.github/workflows/: ci.yaml
R/: dieharder.R  dieharderCallback.R  zzz.R
inst/doc/: RDieHarder.Rnw  RDieHarder.aux  RDieHarder.out  RDieHarder.tex  Rplots.ps
inst/doc/auto/: RDieHarder.el
man/: dieharder.Rd  dieharderCallback.Rd
src/: Makefile  Makevars  Makevars.in  Makevars.win  add_my_types.c  add_ui_rngs.c  callback.c  choose_rng.c  db_gnu_r_rngs.c  dieharder.c  dieharder.h  dieharder_exit.c  globals.c  help.c  histogram.c  init.c  list_rand.c  list_rngs.c  list_tests.c  output.c  output.h  output_rnds.c  parsecl.c  rng_empty_random.c  run_all_tests.c  run_diehard_2dsphere.c  run_diehard_3dsphere.c  run_diehard_birthdays.c  run_diehard_bitstream.c  run_diehard_count_1s_byte.c  run_diehard_count_1s_stream.c  run_diehard_craps.c  run_diehard_dna.c  run_diehard_operm5.c  run_diehard_opso.c  run_diehard_oqso.c  run_diehard_parking_lot.c  run_diehard_rank_32x32.c  run_diehard_rank_6x8.c  run_diehard_runs.c  (+15 more)
src/deprecated/: dieharder.h  testbits.c  work.c
src/libdieharder/: Makefile  Makefile.am~  Makefile.in  Makefile.in~  Makefile.win  Makefile~  Vtest.c  Xtest.c  bits.c  bits.cruft  chisq.c  countx.c  dab_birthdays1.c  dab_dct.c  dab_filltree.c  dab_filltree2.c  dab_opso2.c  diehard_2dsphere.c  diehard_3dsphere.c  diehard_birthdays.c  diehard_bitstream.c  diehard_count_1s_byte.c  diehard_count_1s_stream.c  diehard_craps.c  diehard_dna.c  diehard_operm5.c  diehard_opso.c  diehard_oqso.c  diehard_parking_lot.c  diehard_rank_32x32.c  diehard_rank_6x8.c  diehard_runs.c  diehard_squeeze.c  diehard_sums.c  dieharder_rng_types.c  dieharder_test_types.c  histogram.c  kstest.c  marsaglia_tsang_gcd.c  marsaglia_tsang_gorilla.c  (+34 more)
src/libdieharder/dieharder/: Dtest.h  Vtest.h  Xtest.h  dab_birthdays1.h  dab_bytedistrib.h  dab_dct.h  dab_filltree.h  dab_filltree2.h  dab_monobit2.h  dab_opso2.h  diehard_2dsphere.h  diehard_3dsphere.h  diehard_birthdays.h  diehard_bitstream.h  diehard_count_1s_byte.h  diehard_count_1s_stream.h  diehard_craps.h  diehard_dna.h  diehard_operm5.h  diehard_opso.h  diehard_oqso.h  diehard_parking_lot.h  diehard_rank_32x32.h  diehard_rank_6x8.h  diehard_runs.h  diehard_squeeze.h  diehard_sums.h  dieharder_rng_types.h  dieharder_test_types.h  libdieharder.h  marsaglia_tsang_gcd.h  rgb_bitdist.h  rgb_kstest_test.h  rgb_lagged_sums.h  rgb_minimum_distance.h  rgb_operm.h  rgb_permutations.h  rgb_persist.h  rgb_timing.h  std_test.h  (+5 more)
tests/: RDieHarder.Rout.save  longerRun.R  longerRun.Rout.save
vignettes/: .install_extras  RDieHarder.Rnw  r_generators_result.rds  r_rngs.r
